--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Etch a Sketch</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="contrasticon.png"
   </head>
   <body>
     <header>
@@ -25,7 +26,7 @@
         <button id="colorBtn" class="btn">Color mode</button>
         <button id="rainbowBtn" class="btn">Rainbow mode</button>
         <button id="eraserBtn" class="btn">Eraser</button>
-        <button id="clearBtn" class="clear-btn">Clear</button>
+        <button id="clearBtn" class="btn">Clear</button>
       </div>
     </main>
 
